fix: no visible scroll (#9)

--- a/main.css
+++ b/main.css
@@ -88,7 +88,6 @@ header {
   width: 800px;
   height: 400px;
   outline: 0;
-  padding: 25px;
   line-height: 25px;
   box-sizing: border-box;
 }
